# scope-data-pipeline

./: .env  .env.example  .gitignore  AI_USAGE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/airflow/: __init__.py
app/api/: deps.py
app/core/: config.py  constants.py  container.py  exception_handlers.py  exceptions.py  logging.py  middleware.py
app/db/: engine.py  session.py  unit_of_work.py
app/models/: __init__.py  base.py  company_dim.py  country_dim.py  currency_dim.py  date_dim.py  snapshot_fact.py  upload_dim.py
app/repositories/: company_repository.py  data_quality_repository.py  pipeline_state_repository.py  snapshot_repository.py  upload_repository.py
app/services/: company_service.py  ingestion_service.py  report_service.py  snapshot_service.py  upload_service.py
app/utils/: datetime_utils.py  decimal_utils.py  file_utils.py
data/: corporates_E_1.xlsm  corporates_E_2.xlsm  corporates_H_1.xlsm  corporates_H_2.xlsm  corporates_I_1.xlsm  corporates_J_2.xlsm
data/processed/: corporates_A_1.xlsm  corporates_A_2.xlsm  corporates_B_1.xlsm  corporates_B_2.xlsm  corporates_D_1.xlsm  corporates_D_2.xlsm  corporates_F_1.xlsm  corporates_F_2.xlsm  corporates_G_1.xlsm  corporates_G_2.xlsm
docker/: airflow.Dockerfile  api.Dockerfile  entrypoint.sh
docker/postgres/: init.sql
scripts/: backfill.sh  run_api.sh  run_pipeline.sh
tests/: conftest.py
tests/api/: test_companies.py  test_snapshots.py  test_uploads.py
tests/repositories/: test_company_repository.py  test_snapshot_repository.py  (+1 more)
(+40 files in other folders)
